# qualifyze-data-kata

./: .flake8  README.md  lefthook.yml  mypy.ini  pyproject.toml
qualifyze_data_kata/: distribution_of_audit_type_per_company.py  list_of_salesowners.py  list_of_salesowners_by_company.py  order_id_and_auditor_address.py  order_id_and_auditor_full_name.py
resources/: invoicing_data.json  orders.csv
