[tool.poetry]
name = "qualifyze-data-kata"
version = "0.1.0"
description = ""
authors = ["theUniC <theunic@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pyspark = "^3.5.1"


[tool.poetry.group.dev.dependencies]
mypy = "^1.10.0"
flake8 = "^7.1.0"
black = {extras = ["jupyter"], version = "^24.4.2"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
